--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div class="flex-initial w-full max-w-3/5 flex justify-center items-center">
             <section>
                 <div>
-                    <h1 class="font-[Tuit_Tuit_Regular]" tuit tuit</h1>
+                    <h1 class="font-[Tuit_Tuit_Regular]"> tuit tuit</h1>
                 </div>
                 <div class="bg-white rounded-lg p-6">
                     <h5>Login</h5>
